# daibase

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
docs/: content-app-design.md  keyboard-shortcuts-plan.md  plugin-development.md  plugin-host-design.md
src/: main.tsx  setupTests.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  help.rs  lib.rs  location.rs  main.rs  mcp.rs  models.rs  namespace.rs  paths.rs  plugins.rs  terminal.rs  versioning.rs
src/api/: tauriCommands.ts
src/components/: AppHeader.tsx  CommandLauncher.tsx  FavoriteToggleButton.tsx  FileSurface.tsx  MainContentTop.tsx  MarkdownEditor.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MarkdownWysiwygEditor.tsx  McpServerBanner.test.tsx  McpServerBanner.tsx  PageSidebar.tsx  PageSurface.tsx  ResizableSidebar.tsx  SideBySideDiffView.tsx  SpecialPages.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx
src/lib/: commandRegistry.test.ts  commandRegistry.ts  keyboardShortcuts.test.ts  keyboardShortcuts.ts  location.test.ts  location.ts  markdownStyle.test.ts  markdownStyle.ts  pageCategories.test.ts  pageCategories.ts  pageSearch.test.ts  pageSearch.ts  pluginHost.test.ts  pluginHost.ts  pluginRenderers.test.ts  pluginRenderers.ts  scrollIntoView.test.ts  scrollIntoView.ts
src/routes/: HistoryPage.test.tsx  HistoryPage.tsx  HomePage.test.tsx  HomePage.tsx
